# meridian-link

./: .gitignore  README.md  account.json  input-formatted.json  input.json  package-lock.json  package.json  proof.json  record.json
circom/: Makefile  depositNote.json  ethDepositInput.json  ethDepositNullifier.circom  ethDepositNullifier.r1cs  ethDepositNullifier.sym  ethDepositNullifierCircuitInput.json  ethDepositProof.circom  ethDepositProof.r1cs  ethDepositProof.sym  ethDepositProofSimple.r1cs  ethDepositProofSimple.sym  ethDepositProof_0000.zkey  ethDepositProof_0001.zkey  ethDepositPublicSignals.json  ethDepositWitness.json  input.json  package-lock.json  package.json  pot12_0001.ptau  proof.json  proofReal.json  proof_simple.json  public.json  publicReal.json  public_simple.json  solDepositProof.circom  temp.ts  test-simple.circom  verification_key.json  verification_key_simple.json  witness.wtns  witnessReal.wtns  witnessSimple.wtns
config/: .accounts.env  localhost_address_book.json  localhost_solana_address.json  sol_deposit_account.json  sol_deposit_proof.json  sol_deposit_record.json
cross-chain-token-bridge/: Anchor.toml
cross-chain-token-bridge/programs/cross-chain-token-bridge/: Cargo.toml
cross-chain-token-bridge/programs/cross-chain-token-bridge/src/instructions/: deposit.rs  init.rs
evm-bridge/: hardhat.config.ts  package-lock.json  package.json
integration-tests/: account.json  addressBook.json  input.json  main.ts  proof.json  record.json  withdrawal_account.json  (+2 more)
relayer-rust/: Cargo.toml  build.rs
relayer-rust/src/: main.rs
(+136 files in other folders)
