[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
borsh = "1.5.7"
bs58 = "0.5.1"
circom-prover = "0.1.2"
hex = "0.4.3"
light-client = { path = "../light-protocol/sdk-libs/client" }
num-bigint = "0.4.6"
rust-witness = "0.1.5"
serde = {version= "1.0.219", features=["derive"]}
serde_json = "1.0.140"
solana-pubkey = "2.4.0"

[build-dependencies]
rust-witness = "0.1.5"
