[package]
name = "cross-chain-token-bridge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cross_chain_token_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features=["init-if-needed"]}
light-sdk = { version = "0.12.0", features = ["anchor"] }
light-hasher = { version = "3.0.0", features = ["solana"] }
anchor-spl = {version = "0.31.1", features = [] }